--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -4,16 +4,6 @@ offline page launcher. This simple page has bootup code embedded locally. It sou
 <script src=https://dl.dropboxusercontent.com/u/28448395/projects/android/Tweetoff-code/assets/tweetoff/dbapp.js></script>
 <script src=sim_remote_class.js></script>
 <script>
-/* -- contents of sim_remote_class.js --
-PageApp = function(){
-  this.start= function(){
-	var s = "This is from another source.";
-	document.body.appendChild( document.createElement("div") ).innerHTML=s;
-  }
-}
-*/
-</script>
-<script>
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //TODO: user chooses which app, actually store app in db.
 //-----
@@ -22,7 +12,7 @@ function PageOff(){
   this.appList= new Array();
   this.start= function(){
 	this.appList.push( new AppWrapper("PageApp").serialize() );
-	this.spawnApp(0);
+	this.spawnApp( this.getMaxNum() ); 
   }
   this.getFromDb= function(i){
 	return this.appList[i];
@@ -32,6 +22,32 @@ function PageOff(){
   }
   this.storeApp= function(name){
 	this.appList.push( new AppWrapper(name).serialize() );
+  }
+  this.getMaxNum= function(){
+	return this.appList.length-1;
+  }
+  this.extender= PageOff_cgiExt;
+  this.extender();
+}
+//-----
+function PageOff_cgiExt(){
+  this.start= function(){
+	this.appList.push( new AppWrapper("PageApp").serialize() );
+	this.doCgi();
+  }
+  this.cgi= function(k,def,qy){ var at=(qy+"").split(new RegExp("[\&\?]"+k+"="));
+	return (at.length==1)?def:at[1].split("&")[0]; }
+  this.doCgi= function(){
+	//TODO: cgi detect which page to render
+	//cgi tell it which class to load
+	this.ac= [ this.cgi("name", "RemCls", location), this.cgi("url", "", location) ];
+	if (this.ac[1]) this.srcAndSpawn();
+	else this.spawnApp( this.getMaxNum() ); 
+  }
+  this.srcAndSpawn= function(){
+	//add script tag
+	//watch for when class becomes available
+	//then push to appList and spawn
   }
 }
 //-----
