--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,24 +1,36 @@
-Hello Success <br>
-offline page launcher. This simple page has bootup code embedded locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. Proof of concept is successful so far.
+Offline Page Renderer<br>
+This simple page has bootup code embedded locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. Proof of concept is successful so far.
 <hr>
 <script src=https://dl.dropboxusercontent.com/u/28448395/projects/android/Tweetoff-code/assets/tweetoff/dbapp.js></script>
 <script src=sim_remote_class.js></script>
 <script>
+//8-23-15 JChoy v0.1.114 async db read
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //TODO: user chooses which app, actually store app in db.
 //-----
 function PageOff(){
-  this.sd = new SqlDb();
-  this.appList= new Array();
   this.start= function(){
+	this.initDb();
 	this.appList.push( new AppWrapper("PageApp").serialize() );
-	this.spawnApp( this.getMaxNum() ); 
+	this.getSpawnAppFromDb();
   }
-  this.getFromDb= function(i){
-	return this.appList[i];
+  this.getSpawnAppFromDb= function(){
+	this.getFromDb( this.getMaxNum(), new OOcallback(this, "spawnApp").fcn ); 
   }
-  this.spawnApp= function(i){
-	new AppWrapper().deserialize( this.getFromDb(i) ).spawnApp();
+  this.spawnApp= function(s){
+	new AppWrapper().deserialize( s ).spawnApp();
+  }
+  this.extendClass = function( cls ){ this.extender=cls; this.extender(); }
+  this.extendClass( PageOff_ext_cgi );
+  this.extendClass( PageOff_ext_fakedb );
+}
+//-----
+PageOff_ext_fakedb= function(){
+  this.initDb = function(){
+	this.appList= new Array();
+  }
+  this.getFromDb= function(i, cb){
+	cb( this.appList[i] );
   }
   this.storeApp= function(name){
 	this.appList.push( new AppWrapper(name).serialize() );
@@ -26,12 +38,32 @@ function PageOff(){
   this.getMaxNum= function(){
 	return this.appList.length-1;
   }
-  this.extender= PageOff_cgiExt;
-  this.extender();
 }
 //-----
-function PageOff_cgiExt(){
+PageOff_ext_sqldb= function(){
+  this.initDb = function(){
+	this.sd = new SqlDb();
+	this.sd.sql.getPupById= "SELECT * FROM pups WHERE id=?;"
+	this.sd.init( "PageOff" );
+  }
+  this.getFromDb= function(i){
+	this.sd.dbAction("getPupById", [i], this.gotGetFromDb );
+  }
+  this.gotGetFromDb= function(txn, rs, cols){
+	return this.appList[i];
+  }
+  this.storeApp= function(name){
+	this.appList.push( new AppWrapper(name).serialize() );
+  }
+  this.getMaxNum= function(){
+//async
+	return 0;
+  }
+}
+//-----
+PageOff_ext_cgi = function(){
   this.start= function(){
+	this.initDb();
 	this.appList.push( new AppWrapper("PageApp").serialize() );
 	this.doCgi();
   }
@@ -42,13 +74,23 @@ function PageOff_cgiExt(){
 	//cgi tell it which class to load
 	this.ac= [ this.cgi("name", "RemCls", location), this.cgi("url", "", location) ];
 	if (this.ac[1]) this.srcAndSpawn();
-	else this.spawnApp( this.getMaxNum() ); 
+	else 
+		this.getSpawnAppFromDb();
   }
   this.srcAndSpawn= function(){
 	//add script tag
 	//watch for when class becomes available
 	//then push to appList and spawn
   }
+}
+//-----
+function OOcallback(obj, meth, arg){
+	var _privThis = this;
+	this.meth = meth;
+	this.obj = obj;
+	this.arg = arg;
+	this.fcn=function(a,b,c,d){_privThis.obj[_privThis.meth](a,b,c,d);}
+	this.fcna=function(){_privThis.obj[_privThis.meth](_privThis.arg);}
 }
 //-----
 AppWrapper= function(name){
