--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -4,28 +4,31 @@ This simple page has bootup code embedded locally. It sources in cross domain so
 <script src=https://dl.dropboxusercontent.com/u/28448395/projects/android/Tweetoff-code/assets/tweetoff/dbapp.js></script>
 <script src=sim_remote_class.js></script>
 <script>
-//8-23-15 JChoy v0.1.114 async db read
+//8-23-15 JChoy v0.1.115 working sql db
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
-//TODO: user chooses which app, actually store app in db.
 //-----
 function PageOff(){
   this.start= function(){
 	this.initDb();
-	this.appList.push( new AppWrapper("PageApp").serialize() );
+	this.storeApp( "PageApp" );
 	this.getSpawnAppFromDb();
   }
   this.getSpawnAppFromDb= function(){
-	this.getFromDb( this.getMaxNum(), new OOcallback(this, "spawnApp").fcn ); 
+	var $privThis = this;
+	this.getMaxNum( function(n){
+		$privThis.getFromDb( n, $privThis.spawnApp );
+	} );
   }
   this.spawnApp= function(s){
 	new AppWrapper().deserialize( s ).spawnApp();
   }
   this.extendClass = function( cls ){ this.extender=cls; this.extender(); }
   this.extendClass( PageOff_ext_cgi );
-  this.extendClass( PageOff_ext_fakedb );
+  this.extendClass( PageOff_ext_sqldb );
 }
 //-----
 PageOff_ext_fakedb= function(){
+  this.isFakedb= true;
   this.initDb = function(){
 	this.appList= new Array();
   }
@@ -35,36 +38,40 @@ PageOff_ext_fakedb= function(){
   this.storeApp= function(name){
 	this.appList.push( new AppWrapper(name).serialize() );
   }
-  this.getMaxNum= function(){
-	return this.appList.length-1;
+  this.getMaxNum= function( cb ){
+	cb( this.appList.length-1 );
   }
 }
 //-----
 PageOff_ext_sqldb= function(){
   this.initDb = function(){
-	this.sd = new SqlDb();
+	this.sd = new DbApp();
 	this.sd.sql.getPupById= "SELECT * FROM pups WHERE id=?;"
+	this.sd.sql.getMaxId= "SELECT max(id) id FROM pups;"
 	this.sd.init( "PageOff" );
   }
-  this.getFromDb= function(i){
-	this.sd.dbAction("getPupById", [i], this.gotGetFromDb );
-  }
-  this.gotGetFromDb= function(txn, rs, cols){
-	return this.appList[i];
+  this.getFromDb= function(i, cb){
+	this.sd.getPupByIdDb( [i], function(txn, rs){
+		if (rs.rows.length>0) cb( rs.rows.item(0)['name'] );
+	} );
   }
   this.storeApp= function(name){
-	this.appList.push( new AppWrapper(name).serialize() );
+	var s = new AppWrapper(name).serialize();
+	this.sd.savePupDb( [s], this.resStoreApp );
   }
-  this.getMaxNum= function(){
-//async
-	return 0;
+  this.resStoreApp= function(){
+  }
+  this.getMaxNum= function( cb ){
+	this.sd.getMaxIdDb( [], function(txn, rs){
+		if (rs.rows.length>0) cb( rs.rows.item(0)['id'] );
+	});
   }
 }
 //-----
 PageOff_ext_cgi = function(){
   this.start= function(){
 	this.initDb();
-	this.appList.push( new AppWrapper("PageApp").serialize() );
+	if (this.isFakedb) this.storeApp( "PageApp" );
 	this.doCgi();
   }
   this.cgi= function(k,def,qy){ var at=(qy+"").split(new RegExp("[\&\?]"+k+"="));
@@ -113,3 +120,6 @@ AppWrapper= function(name){
 }
 new PageOff().start();
 </script>
+
+
+
