--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -4,23 +4,31 @@ This simple page has bootup code embedded locally. It sources in cross domain so
 <script src=https://dl.dropboxusercontent.com/u/28448395/projects/android/Tweetoff-code/assets/tweetoff/dbapp.js></script>
 <script src=sim_remote_class.js></script>
 <script>
-//8-23-15 JChoy v0.1.115 working sql db
+//8-23-15 JChoy v0.1.116 cgi dictates which page to render
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //-----
 function PageOff(){
+  this.showId = -1;
   this.start= function(){
 	this.initDb();
-	this.storeApp( "PageApp" );
+	if (this.isFakedb) this.storeApp( "PageApp" );
+	if (this.loadUrl) this.srcAndSpawn();
 	this.getSpawnAppFromDb();
   }
   this.getSpawnAppFromDb= function(){
 	var $privThis = this;
+	if (this.showId>=0) return this.getFromDb( this.showId, this.spawnApp );
 	this.getMaxNum( function(n){
 		$privThis.getFromDb( n, $privThis.spawnApp );
 	} );
   }
   this.spawnApp= function(s){
 	new AppWrapper().deserialize( s ).spawnApp();
+  }
+  this.srcAndSpawn= function(){
+	//add script tag
+	//watch for when class becomes available
+	//then push to appList and spawn
   }
   this.extendClass = function( cls ){ this.extender=cls; this.extender(); }
   this.extendClass( PageOff_ext_cgi );
@@ -69,36 +77,20 @@ PageOff_ext_sqldb= function(){
 }
 //-----
 PageOff_ext_cgi = function(){
+  this.superStart= this.start;
   this.start= function(){
-	this.initDb();
-	if (this.isFakedb) this.storeApp( "PageApp" );
 	this.doCgi();
+	this.superStart();
   }
   this.cgi= function(k,def,qy){ var at=(qy+"").split(new RegExp("[\&\?]"+k+"="));
 	return (at.length==1)?def:at[1].split("&")[0]; }
   this.doCgi= function(){
-	//TODO: cgi detect which page to render
-	//cgi tell it which class to load
-	this.ac= [ this.cgi("name", "RemCls", location), this.cgi("url", "", location) ];
-	if (this.ac[1]) this.srcAndSpawn();
-	else 
-		this.getSpawnAppFromDb();
-  }
-  this.srcAndSpawn= function(){
-	//add script tag
-	//watch for when class becomes available
-	//then push to appList and spawn
+	this.showId = this.cgi("id","-1",location);
+	this.loadUrl = this.cgi("url", "", location);
+	this.clsName = this.cgi("name", "RemCls", location);
   }
 }
-//-----
-function OOcallback(obj, meth, arg){
-	var _privThis = this;
-	this.meth = meth;
-	this.obj = obj;
-	this.arg = arg;
-	this.fcn=function(a,b,c,d){_privThis.obj[_privThis.meth](a,b,c,d);}
-	this.fcna=function(){_privThis.obj[_privThis.meth](_privThis.arg);}
-}
+
 //-----
 AppWrapper= function(name){
   this.name= name;
@@ -120,6 +112,3 @@ AppWrapper= function(name){
 }
 new PageOff().start();
 </script>
-
-
-
