--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -4,20 +4,24 @@ This simple page has bootup code embedded locally. It sources in cross domain so
 <script src=https://dl.dropboxusercontent.com/u/28448395/projects/android/Tweetoff-code/assets/tweetoff/dbapp.js></script>
 <script src=sim_remote_class.js></script>
 <script>
-//8-23-15 JChoy v0.1.116 cgi dictates which page to render
+//8-24-15 JChoy v0.1.117 PageOff_HtmlApp, HtmlAppFactory
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //-----
 function PageOff(){
   this.showId = -1;
   this.start= function(){
 	this.initDb();
-	if (this.isFakedb) this.storeApp( "PageApp" );
 	if (this.loadUrl) this.srcAndSpawn();
 	this.getSpawnAppFromDb();
   }
   this.getSpawnAppFromDb= function(){
 	var $privThis = this;
 	if (this.showId>=0) return this.getFromDb( this.showId, this.spawnApp );
+	if (this.addHtmlApp) {
+		HtmlApp = new this.HtmlAppFactory( unescape(this.addHtmlApp) ).nuClass;
+		this.storeApp( "HtmlApp" );
+		this.addHtmlApp= null;
+	}
 	this.getMaxNum( function(n){
 		$privThis.getFromDb( n, $privThis.spawnApp );
 	} );
@@ -30,25 +34,13 @@ function PageOff(){
 	//watch for when class becomes available
 	//then push to appList and spawn
   }
+  this.HtmlAppFactory = function(s){
+	var code= "this.constructor= PageOff_HtmlApp;\nthis.constructor();\n";
+	this.nuClass = new Function( code + "this.text=" +JSON.stringify(s) );
+  }
   this.extendClass = function( cls ){ this.extender=cls; this.extender(); }
   this.extendClass( PageOff_ext_cgi );
   this.extendClass( PageOff_ext_sqldb );
-}
-//-----
-PageOff_ext_fakedb= function(){
-  this.isFakedb= true;
-  this.initDb = function(){
-	this.appList= new Array();
-  }
-  this.getFromDb= function(i, cb){
-	cb( this.appList[i] );
-  }
-  this.storeApp= function(name){
-	this.appList.push( new AppWrapper(name).serialize() );
-  }
-  this.getMaxNum= function( cb ){
-	cb( this.appList.length-1 );
-  }
 }
 //-----
 PageOff_ext_sqldb= function(){
@@ -88,9 +80,20 @@ PageOff_ext_cgi = function(){
 	this.showId = this.cgi("id","-1",location);
 	this.loadUrl = this.cgi("url", "", location);
 	this.clsName = this.cgi("name", "RemCls", location);
+	this.addHtmlApp= this.cgi("addhtmlapp","", location);
   }
 }
 
+//-----
+PageOff_HtmlApp= function(){
+  this.text= "This will be displayed.";
+  this.start= function(){
+	this.write(this.text);
+  }
+  this.write= function(s){
+	document.body.appendChild( document.createElement("div") ).innerHTML=s;
+  }
+}
 //-----
 AppWrapper= function(name){
   this.name= name;
