--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,10 +1,8 @@
 Offline Page Renderer<br>
-This simple page has bootup code embedded locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. Proof of concept is successful so far.
-<hr>
 <script src=https://dl.dropboxusercontent.com/u/28448395/projects/android/Tweetoff-code/assets/tweetoff/dbapp.js></script>
 <script src=sim_remote_class.js></script>
 <script>
-//8-24-15 JChoy v0.1.117 PageOff_HtmlApp, HtmlAppFactory
+//8-24-15 JChoy v0.1.118 srcAndSpawn implemented
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //-----
 function PageOff(){
@@ -16,7 +14,8 @@ function PageOff(){
   }
   this.getSpawnAppFromDb= function(){
 	var $privThis = this;
-	if (this.showId>=0) return this.getFromDb( this.showId, this.spawnApp );
+	if (this.showId>=0) 
+		return this.getFromDb( this.showId, this.spawnApp );
 	if (this.addHtmlApp) {
 		HtmlApp = new this.HtmlAppFactory( unescape(this.addHtmlApp) ).nuClass;
 		this.storeApp( "HtmlApp" );
@@ -30,9 +29,19 @@ function PageOff(){
 	new AppWrapper().deserialize( s ).spawnApp();
   }
   this.srcAndSpawn= function(){
-	//add script tag
-	//watch for when class becomes available
-	//then push to appList and spawn
+	var el=document.createElement("script");
+	el.src= unescape(this.loadUrl);
+	document.body.appendChild(el);
+
+	window[this.clsName]= null;
+	this.watchForClass( 50 );
+  }
+  this.watchForClass = function(n){
+	if (n<0) return alert(this.clsName +" not found");
+	var s= this.clsName;
+	if (window[s])
+		return this.storeApp(s);
+	var tmr=setTimeout( new OOcallback(this, "watchForClass", n-1).fcna, 100 );
   }
   this.HtmlAppFactory = function(s){
 	var code= "this.constructor= PageOff_HtmlApp;\nthis.constructor();\n";
@@ -60,6 +69,7 @@ PageOff_ext_sqldb= function(){
 	this.sd.savePupDb( [s], this.resStoreApp );
   }
   this.resStoreApp= function(){
+	new PageOff_HtmlApp().write("Item succesfully saved to database.");
   }
   this.getMaxNum= function( cb ){
 	this.sd.getMaxIdDb( [], function(txn, rs){
@@ -93,6 +103,15 @@ PageOff_HtmlApp= function(){
   this.write= function(s){
 	document.body.appendChild( document.createElement("div") ).innerHTML=s;
   }
+}
+//-----
+function OOcallback(obj, meth, arg){
+	var _privThis = this;
+	this.meth = meth;
+	this.obj = obj;
+	this.arg = arg;
+	this.fcn=function(a,b,c,d){_privThis.obj[_privThis.meth](a,b,c,d);}
+	this.fcna=function(){_privThis.obj[_privThis.meth](_privThis.arg);}
 }
 //-----
 AppWrapper= function(name){
