--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,8 +1,7 @@
+<title>Offline Page Renderer</title>
 Offline Page Renderer<br>
-<script xsrc=https://dl.dropboxusercontent.com/u/28448395/projects/android/Tweetoff-code/assets/tweetoff/dbapp.js></script>
-<script src=sim_remote_class.js></script>
 <script>
-//8-24-15 JChoy v0.2.119 sqlDb and DbApp inline to fully work offline
+//8-24-15 JChoy v0.2.123 WelcomeApp, getListFromDb
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //TODO: load DbApp and SqlDb into local storage
 //-----
@@ -19,11 +18,15 @@ function PageOff(){
 		return this.getFromDb( this.showId, this.spawnApp );
 	if (this.addHtmlApp) {
 		HtmlApp = new this.HtmlAppFactory( unescape(this.addHtmlApp) ).nuClass;
-		this.storeApp( "HtmlApp" );
-		this.addHtmlApp= null;
+		this.storeApp( "HtmlApp", this.addHtmlApp= null );
 	}
-	this.getMaxNum( function(n){
+	this.getMaxNum( function(n){		//run latest app
 		$privThis.getFromDb( n, $privThis.spawnApp );
+	} );
+	this.getListFromDb( function(at){	//install first app
+		if (at.length>0) return;
+		WelcomeApp = new $privThis.HtmlAppFactory( "Welcome to PageOff" ).nuClass;
+		$privThis.storeApp( "WelcomeApp" );
 	} );
   }
   this.spawnApp= function(s){
@@ -39,9 +42,8 @@ function PageOff(){
   }
   this.watchForClass = function(n){
 	if (n<0) return alert(this.clsName +" not found");
-	var s= this.clsName;
-	if (window[s])
-		return this.storeApp(s);
+	if (window[this.clsName])
+		return this.storeApp(this.clsName);
 	var tmr=setTimeout( new OOcallback(this, "watchForClass", n-1).fcna, 100 );
   }
   this.HtmlAppFactory = function(s){
@@ -58,11 +60,24 @@ PageOff_ext_sqldb= function(){
 	this.sd = new DbApp();
 	this.sd.sql.getPupById= "SELECT * FROM pups WHERE id=?;"
 	this.sd.sql.getMaxId= "SELECT max(id) id FROM pups;"
+	this.sd.sql.getIds= "SELECT id FROM pups ORDER by id DESC;"
 	this.sd.init( "PageOff" );
+  }
+  this.getListFromDb= function(cb){
+	this.sd.getIdsDb( [], function(txn, rs){
+		var res=[], colName="";
+		if (rs.rows.length==0) return cb(res);
+		for (var m in rs.rows.item(0)) colName=m;
+		for (var i=0; i<rs.rows.length; i++) res.push(rs.rows.item(i)[colName]);
+		cb( res );
+	} );
   }
   this.getFromDb= function(i, cb){
 	this.sd.getPupByIdDb( [i], function(txn, rs){
-		if (rs.rows.length>0) cb( rs.rows.item(0)['name'] );
+		if (rs.rows.length==0) return;
+		var colName= "";
+		for (var m in rs.rows.item(0)) colName=m;
+		cb( rs.rows.item(0)[colName] );
 	} );
   }
   this.storeApp= function(name){
@@ -70,7 +85,7 @@ PageOff_ext_sqldb= function(){
 	this.sd.savePupDb( [s], this.resStoreApp );
   }
   this.resStoreApp= function(){
-	new PageOff_HtmlApp().write("Item succesfully saved to database.");
+	new PageOff_HtmlApp().write("Item successfully saved to database.");
   }
   this.getMaxNum= function( cb ){
 	this.sd.getMaxIdDb( [], function(txn, rs){
@@ -174,27 +189,6 @@ function DbApp(){
  }
  $.dbAction= function( methName, parms, cb ){
   this.sd.execParamSql( $.sql[methName], parms, cb );
- }
- $.enableOutput=function(cols,divName){
-  var v=document.getElementById(divName), s;
-  v.cols=cols; v.mas=this;
-  s="v.innerHTML=v.mas.renderResultsTable(tx,rs,v.cols);";
-  this['output_'+divName]=new Function("tx","rs",
-   "var v=document.getElementById('"+divName+"'); "+s);
- }
- $.rsToArray= function(txn, rs, cols){
-  var res=new Array();
-  for (var i=0; i<rs.rows.length; i++)
-   for (var j=0,a=res[i]=new Array(); j<cols.length; j++) 
-    res[i][j]= rs.rows.item(i)[cols[j]];
-  return res;
- }
- $.renderResultsTable= function(txn, rs, cols){
-  var res="<table border=1>", at=this.rsToArray(txn, rs, cols);
-  res+="<tr><th>"+cols.join("</th><th>")+"</th></tr>";
-  for (var i=0,x=res=res+'</tr>'; i<at.length; i++)
-   res+="<tr><td>"+at[i].join("</td><td>")+"</td></tr>";
-  return res+"</table>";
  }
 }
 
