--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,7 +1,7 @@
 <title>Offline Page Renderer</title>
 Offline Page Renderer<br>
 <script>
-//8-24-15 JChoy v0.2.123 WelcomeApp, getListFromDb
+//8-25-15 JChoy v0.2.124 getColNames(), economize code.
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //TODO: load DbApp and SqlDb into local storage
 //-----
@@ -21,10 +21,7 @@ function PageOff(){
 		this.storeApp( "HtmlApp", this.addHtmlApp= null );
 	}
 	this.getMaxNum( function(n){		//run latest app
-		$privThis.getFromDb( n, $privThis.spawnApp );
-	} );
-	this.getListFromDb( function(at){	//install first app
-		if (at.length>0) return;
+		if (n) return $privThis.getFromDb( n, $privThis.spawnApp );
 		WelcomeApp = new $privThis.HtmlAppFactory( "Welcome to PageOff" ).nuClass;
 		$privThis.storeApp( "WelcomeApp" );
 	} );
@@ -36,9 +33,7 @@ function PageOff(){
 	var el=document.createElement("script");
 	el.src= unescape(this.loadUrl);
 	document.body.appendChild(el);
-
-	window[this.clsName]= null;
-	this.watchForClass( 50 );
+	this.watchForClass( 50, window[this.clsName]= null );
   }
   this.watchForClass = function(n){
 	if (n<0) return alert(this.clsName +" not found");
@@ -58,16 +53,20 @@ function PageOff(){
 PageOff_ext_sqldb= function(){
   this.initDb = function(){
 	this.sd = new DbApp();
-	this.sd.sql.getPupById= "SELECT * FROM pups WHERE id=?;"
+	this.sd.sql.getPupById= "SELECT name FROM pups WHERE id=?;"
 	this.sd.sql.getMaxId= "SELECT max(id) id FROM pups;"
 	this.sd.sql.getIds= "SELECT id FROM pups ORDER by id DESC;"
 	this.sd.init( "PageOff" );
   }
+  this.getColNames= function( row ){
+	var res = new Array();
+	for (var m in row) res.push(m);
+	return res;
+  }
   this.getListFromDb= function(cb){
 	this.sd.getIdsDb( [], function(txn, rs){
-		var res=[], colName="";
-		if (rs.rows.length==0) return cb(res);
-		for (var m in rs.rows.item(0)) colName=m;
+		if (rs.rows.length==0) return cb([]);
+		var res=[], colName=new PageOff_ext_sqldb().getColNames(rs.rows.item(0))[0];
 		for (var i=0; i<rs.rows.length; i++) res.push(rs.rows.item(i)[colName]);
 		cb( res );
 	} );
@@ -75,8 +74,7 @@ PageOff_ext_sqldb= function(){
   this.getFromDb= function(i, cb){
 	this.sd.getPupByIdDb( [i], function(txn, rs){
 		if (rs.rows.length==0) return;
-		var colName= "";
-		for (var m in rs.rows.item(0)) colName=m;
+		var colName= new PageOff_ext_sqldb().getColNames(rs.rows.item(0))[0];
 		cb( rs.rows.item(0)[colName] );
 	} );
   }
@@ -89,7 +87,7 @@ PageOff_ext_sqldb= function(){
   }
   this.getMaxNum= function( cb ){
 	this.sd.getMaxIdDb( [], function(txn, rs){
-		if (rs.rows.length>0) cb( rs.rows.item(0)['id'] );
+		cb( (rs.rows.length>0) ? rs.rows.item(0)['id'] : null );
 	});
   }
 }
@@ -123,9 +121,7 @@ PageOff_HtmlApp= function(){
 //-----
 function OOcallback(obj, meth, arg){
 	var _privThis = this;
-	this.meth = meth;
-	this.obj = obj;
-	this.arg = arg;
+	[this.meth = meth, this.obj = obj, this.arg = arg];
 	this.fcn=function(a,b,c,d){_privThis.obj[_privThis.meth](a,b,c,d);}
 	this.fcna=function(){_privThis.obj[_privThis.meth](_privThis.arg);}
 }
@@ -139,8 +135,7 @@ AppWrapper= function(name){
   }
   this.deserialize= function(s){
 	eval( "obj="+ s );
-	this.name= obj.name;
-	this.code= obj.code;
+	[this.name= obj.name, this.code= obj.code];
 	return this;
   }
   this.spawnApp= function(){
