--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,7 +1,7 @@
 <title>Offline Page Renderer</title>
 Offline Page Renderer<br>
 <script>
-//8-25-15 JChoy v0.2.124 getColNames(), economize code.
+//8-25-15 JChoy v0.3.125 Ooze.bake
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //TODO: load DbApp and SqlDb into local storage
 //-----
@@ -31,8 +31,7 @@ function PageOff(){
   }
   this.srcAndSpawn= function(){
 	var el=document.createElement("script");
-	el.src= unescape(this.loadUrl);
-	document.body.appendChild(el);
+	document.body.appendChild( this.bake(el,{src:unescape(this.loadUrl)}) );
 	this.watchForClass( 50, window[this.clsName]= null );
   }
   this.watchForClass = function(n){
@@ -42,10 +41,10 @@ function PageOff(){
 	var tmr=setTimeout( new OOcallback(this, "watchForClass", n-1).fcna, 100 );
   }
   this.HtmlAppFactory = function(s){
-	var code= "this.constructor= PageOff_HtmlApp;\nthis.constructor();\n";
-	this.nuClass = new Function( code + "this.text=" +JSON.stringify(s) );
-  }
-  this.extendClass = function( cls ){ this.extender=cls; this.extender(); }
+	var code= "new Ooze().extend(this,PageOff_HtmlApp);\n";
+	this.nuClass = new Function( "this.text=" +JSON.stringify(s) );
+  } //subclass
+  new Ooze().bake(this);
   this.extendClass( PageOff_ext_cgi );
   this.extendClass( PageOff_ext_sqldb );
 }
@@ -93,7 +92,7 @@ PageOff_ext_sqldb= function(){
 }
 //-----
 PageOff_ext_cgi = function(){
-  this.superStart= this.start;
+  this.superStart= this.start;	//consider using array
   this.start= function(){
 	this.doCgi();
 	this.superStart();
@@ -106,17 +105,29 @@ PageOff_ext_cgi = function(){
 	this.clsName = this.cgi("name", "RemCls", location);
 	this.addHtmlApp= this.cgi("addhtmlapp","", location);
   }
-}
-
+} //class
 //-----
-PageOff_HtmlApp= function(){
-  this.text= "This will be displayed.";
-  this.start= function(){
-	this.write(this.text);
+function Ooze(){	//base class primal methods
+  this.bake= function( obj, oven ){
+	if (!oven) oven = this;
+	for (var m in oven) obj[m]=oven[m]; return obj;
+  }
+  this.extendClass = function( cls ){
+	this.extender=cls; this.extender();
+  }
+  this.extend = function( obj, cls ){
+	this.bake( obj ).extendClass( cls );
   }
   this.write= function(s){
 	document.body.appendChild( document.createElement("div") ).innerHTML=s;
   }
+}
+
+//-----
+PageOff_HtmlApp= function(){
+	this.text= "This will be displayed.";
+	this.start= function(){ this.write(this.text); }
+	new Ooze().bake(this);
 }
 //-----
 function OOcallback(obj, meth, arg){
