--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,7 +1,7 @@
 <title>Offline Page Renderer</title>
 Offline Page Renderer<br>
 <script>
-//8-25-15 JChoy v0.3.125 Ooze.bake
+//8-25-15 JChoy v0.3.126 Fix bug in HtmlAppFactory. Minor fixes to facilitate MakerApp (external)
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //TODO: load DbApp and SqlDb into local storage
 //-----
@@ -42,7 +42,7 @@ function PageOff(){
   }
   this.HtmlAppFactory = function(s){
 	var code= "new Ooze().extend(this,PageOff_HtmlApp);\n";
-	this.nuClass = new Function( "this.text=" +JSON.stringify(s) );
+	this.nuClass = new Function( code + "this.text=" +JSON.stringify(s) ); //bug in v0.3.125
   } //subclass
   new Ooze().bake(this);
   this.extendClass( PageOff_ext_cgi );
@@ -78,6 +78,7 @@ PageOff_ext_sqldb= function(){
 	} );
   }
   this.storeApp= function(name){
+	if (!this.sd) this.initDb();
 	var s = new AppWrapper(name).serialize();
 	this.sd.savePupDb( [s], this.resStoreApp );
   }
@@ -119,7 +120,8 @@ function Ooze(){	//base class primal methods
 	this.bake( obj ).extendClass( cls );
   }
   this.write= function(s){
-	document.body.appendChild( document.createElement("div") ).innerHTML=s;
+	var el =document.body.appendChild( document.createElement("div") );
+	return this.bake(el,{innerHTML:s});
   }
 }
 
@@ -140,8 +142,8 @@ function OOcallback(obj, meth, arg){
 AppWrapper= function(name){
   this.name= name;
   this.serialize= function(){
-	var obj = {name:name};
-	obj.code= window[name].toString();
+	var obj = {name:this.name};
+	obj.code= window[this.name].toString();
 	return JSON.stringify(obj);
   }
   this.deserialize= function(s){
