--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,12 +1,14 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1;" />
 <title>Offline Page Renderer</title>
-Offline Page Renderer<br>
+Offline Page Renderer<hr>
 <script>
-//8-25-15 JChoy v1.127 showFooter() loadMore() to retrive prev data
+//8-26-15 JChoy v1.128 buttonify, meta-viewport, customize
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //TODO: favorite, load using scroll
 //-----
 function PageOff(){
   this.showId = -1;
+  new Ooze().bake(this);
   this.start= function(){
 	this.initDb();
 	if (this.loadUrl) this.srcAndSpawn();
@@ -14,9 +16,15 @@ function PageOff(){
 	this.showFooter();
   }
   this.showFooter= function(){
-	var el= document.createElement("div")
-	document.body.appendChild( this.bake(el, {innerHTML:"<hr>More",pageOffFooter:1}) );
+	var div= document.createElement("div");
+	document.body.appendChild( this.bake(div, {pageOffFooter:1}) );
+	div.style.padding= "8 0 0 0";
+	var el= this.bake( document.createElement("span"), {innerHTML:"More"} );
+	div.appendChild( this.buttonify(el) );
 	el.onclick= new OOcallback(this, "loadMore").fcn;
+	el= this.bake( document.createElement("span"), {innerHTML:"Customize"} );
+	div.appendChild( this.buttonify(el) );
+	el.onclick= new OOcallback(this, "customize").fcn;
   }
   this.restart= function(n){
 	this.initDb();
@@ -24,6 +32,7 @@ function PageOff(){
 	this.write(document.title);
 	this.getFromDb( this.showId=n, this.spawnApp );
   }
+  this.customize= function(){ alert( "Not available" ); }
   this.loadMore= function(){
 	this.initDb();
 	this.write("<hr>");
@@ -63,8 +72,7 @@ function PageOff(){
   this.HtmlAppFactory = function(s){
 	var code= "new Ooze().extend(this,PageOff_HtmlApp);\n";
 	this.nuClass = new Function( code + "this.text=" +JSON.stringify(s) ); //bug in v0.3.125
-  } //subclass
-  new Ooze().bake(this);
+  } //inner class
   this.extendClass( PageOff_ext_cgi );
   this.extendClass( PageOff_ext_sqldb );
 }
@@ -142,6 +150,13 @@ function Ooze(){	//base class primal methods
   this.write= function(s){
 	var el =document.body.appendChild( document.createElement("div") );
 	return this.bake(el,{innerHTML:s});
+  }
+  this.buttonify= function(el){
+	el.style.backgroundColor= "lightgray";
+	el.style.margin= el.style.padding= "1 5 1 5";
+	el.onmouseover= function(){ this.style.fontWeight="bold" }
+	el.onmouseout= function(){ this.style.fontWeight="normal" }
+	return el;
   }
 }
 
