--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -2,9 +2,8 @@
 <title>Offline Page Renderer</title>
 Offline Page Renderer<hr>
 <script>
-//8-26-15 JChoy v1.128 buttonify, meta-viewport, customize
+//8-26-15 JChoy v1.129 favorite, doFooterButton
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
-//TODO: favorite, load using scroll
 //-----
 function PageOff(){
   this.showId = -1;
@@ -16,27 +15,19 @@ function PageOff(){
 	this.showFooter();
   }
   this.showFooter= function(){
-	var div= document.createElement("div");
-	document.body.appendChild( this.bake(div, {pageOffFooter:1}) );
-	div.style.padding= "8 0 0 0";
-	var el= this.bake( document.createElement("span"), {innerHTML:"More"} );
-	div.appendChild( this.buttonify(el) );
-	el.onclick= new OOcallback(this, "loadMore").fcn;
-	el= this.bake( document.createElement("span"), {innerHTML:"Customize"} );
-	div.appendChild( this.buttonify(el) );
-	el.onclick= new OOcallback(this, "customize").fcn;
+	var div= this.bake( document.createElement("div"), {pageOffFooter:1} );
+	document.body.appendChild(div).style.padding= "8 0 0 0";
+	for (var i=0,at=["More","Customize","Favorite"],$th=this; i<at.length; i++){
+	  var el= this.bake( document.createElement("span"), {innerHTML:at[i]} );
+	  div.appendChild( this.buttonify(el) ).onclick= function(){$th.doFooterButton(this)}
+	}	
   }
-  this.restart= function(n){
-	this.initDb();
-	document.body.innerHTML = "";
-	this.write(document.title);
-	this.getFromDb( this.showId=n, this.spawnApp );
-  }
-  this.customize= function(){ alert( "Not available" ); }
-  this.loadMore= function(){
-	this.initDb();
-	this.write("<hr>");
-	this.getFromDb( this.showId-=1, this.spawnApp );
+  this.doFooterButton= function(el){
+	var s=el.innerHTML;
+	if (s=="More"){
+		this.write("<hr>");
+		this.getFromDb( this.showId-=1, this.spawnApp );
+	} else alert("Not available");
   }
   this.getSpawnAppFromDb= function(){
 	var $privThis = this;
