--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -2,7 +2,7 @@
 <title>Offline Page Renderer</title>
 Offline Page Renderer<hr>
 <script>
-//8-29-15 JChoy v1.132 remove unused code
+//8-29-15 JChoy v1.133 use .createCBfunction() instead of OOcallback
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //-----
 function PageOff(){
@@ -52,13 +52,13 @@ function PageOff(){
   this.srcAndSpawn= function(){
 	var el=document.createElement("script");
 	document.body.appendChild( this.bake(el,{src:unescape(this.loadUrl)}) );
-	this.watchForClass( 50, window[this.clsName]= null );
+	this.watchForClass( this, 50, window[this.clsName]= null );
   }
-  this.watchForClass = function(n){
+  this.watchForClass = function( obj, n ){
 	if (n<0) return alert(this.clsName +" not found");
 	if (window[this.clsName])
 		return this.storeApp(this.clsName);
-	var tmr=setTimeout( new OOcallback(this, "watchForClass", n-1).fcna, 100 );
+	var tmr=setTimeout( this.createCBfunction("watchForClass",n-1), 100 );
   }
   this.HtmlAppFactory = function(s){
 	var code= "new Ooze().extend(this,PageOff_HtmlApp);\n";
@@ -72,7 +72,6 @@ PageOff_ext_sqldb= function(){
 	this.sd = new DbApp();
 	this.sd.sql.getPupById= "SELECT name FROM pups WHERE id=?;"
 	this.sd.sql.getMaxId= "SELECT max(id) id FROM pups;"
-	//this.sd.sql.getIds= "SELECT id FROM pups ORDER by id DESC;"
 	this.sd.init( "PageOff" );
   }
   this.getFromDb= function(i, cb){
@@ -126,6 +125,10 @@ function Ooze(){	//base class primal methods
 	var el =document.body.appendChild( document.createElement("div") );
 	return this.bake(el,{innerHTML:s});
   }
+  this.createCBfunction = function(meth,arg){
+	var $pthis = this;
+	return function(a,b,c,d){ $pthis[meth](this,arg,a,b,c,d) }
+  }
   this.buttonify= function(el){
 	el.style.backgroundColor= "lightgray";
 	el.style.margin= el.style.padding= "1 5 1 5";
@@ -140,13 +143,6 @@ PageOff_HtmlApp= function(){
 	this.text= "This will be displayed.";
 	this.start= function(){ this.write(this.text); }
 	new Ooze().bake(this);
-}
-//-----
-function OOcallback(obj, meth, arg){
-	var _privThis = this;
-	[this.meth = meth, this.obj = obj, this.arg = arg];
-	this.fcn=function(a,b,c,d){_privThis.obj[_privThis.meth](a,b,c,d);}
-	this.fcna=function(){_privThis.obj[_privThis.meth](_privThis.arg);}
 }
 //-----
 AppWrapper= function(name){
@@ -170,7 +166,6 @@ AppWrapper= function(name){
 //------------
 //2-4-11 JChoy sqllite on iPhone
 //5-8-11 JChoy v1.121 DbTableApp
-
 function SqlDb(){
  var $=this;
  $.dbCfg= {name:'custom_sqlite',ver:'1.0',dispName:'ctmsql',max:1000000};
