--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -2,7 +2,7 @@
 <title>Offline Page Renderer</title>
 Offline Page Renderer<hr>
 <script>
-//8-29-15 JChoy v1.133 use .createCBfunction() instead of OOcallback
+//8-29-15 JChoy v1.134 toggle(mem)
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
 //-----
 function PageOff(){
@@ -28,7 +28,7 @@ function PageOff(){
   this.doFooterButton= function(el){
 	var s=el.innerHTML;
 	if (s=="More"){
-		this.write("<hr>");
+		this.write("<hr color='"+((this.toggle("hrColor"))?"orange":"green")+"'>");
 		this.getFromDb( this.showId-=1, this.spawnApp );
 	} else if (s=="Customize"){
 		new PageOff_srcCls().start("CustomizerApp",
@@ -125,6 +125,7 @@ function Ooze(){	//base class primal methods
 	var el =document.body.appendChild( document.createElement("div") );
 	return this.bake(el,{innerHTML:s});
   }
+  this.toggle = function(mem){ return this[mem]= (this[mem])? false : true; }
   this.createCBfunction = function(meth,arg){
 	var $pthis = this;
 	return function(a,b,c,d){ $pthis[meth](this,arg,a,b,c,d) }
