pageoff.html v1.145 put meta tag inside html tag; add network section in manifest

--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,5 +1,5 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
 <html manifest="pageoff.manifest">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
 <head>
 <title>Haqabob</title>
 <style>
@@ -8,7 +8,7 @@ textarea {margin:0 5 -6 1}
 </head>
 Haqabob<div><hr></div>
 <script>
-//9-8-15 JChoy v1.141 use pageoff.manifest page as plain text, supposedly no longer required in appcache spec.
+//9-9-15 JChoy v1.145 put meta tag inside html tag
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app.
 //-----
 function PageOff(){
