apecklist.html use local drb file for Curly 1595

--- a/guptinal-i/saad/psdbhtml/apecklist.html
+++ b/guptinal-i/saad/psdbhtml/apecklist.html
@@ -1,5 +1,5 @@
 <meta name=viewport content="width=device-width; initial-scale=1.5; maximum-scale=4.0; minimum-scale=0.7;" />
-<script src=http://rip.okdaily.com/mad/textStore.php?f=text&i=1595></script>
+<script src=../../jsondata/psdb/ape/tssrc/1595.txt></script>
 <body>
 <div>Loading code...</div>
 <div></div>
