comment in apecklist.html

--- a/guptinal-i/saad/psdbhtml/apecklist.html
+++ b/guptinal-i/saad/psdbhtml/apecklist.html
@@ -12,5 +12,6 @@ function PageApp(){
     new ApeCklist().start( document.getElementsByTagName("div")[0] );
   }
 }
+//Curly uses http while dldrb uses https, will not work
 Curly.bootClass( "TS2326,TS2327","JsonLoader,ApeCklist,PageApp" );
 </script>
