source in js from tssrc on drbx via https

--- a/guptinal-i/saad/psdbhtml/apecklist.html
+++ b/guptinal-i/saad/psdbhtml/apecklist.html
@@ -1,136 +1,12 @@
 <meta name=viewport content="width=device-width; initial-scale=1.5; maximum-scale=4.0; minimum-scale=0.7;" />
 <script src=../../jsondata/psdb/ape/tssrc/1595.txt></script>
+<script src="../../jsondata/psdb/ape/tssrc/2326.txt"></script>
+<script src="../../jsondata/psdb/ape/tssrc/2327.txt"></script>
 <body>
 <div>Loading code...</div>
 <div></div>
 </body>
 
 <script>
-//JsonLoader 1-25-2016 JChoy 2326
-//-----
-//This class may not deliver payload 
-//if another subscriber errors out due to deleted DOM elements
-function JsonLoader(){
-  this.clients= [];
-  this.s= function( jd ){
-    for (var at=this.clients, i=0; i<at.length; i=i-(-1))
-      try { at[i].obj[at[i].meth]( jd ); } catch (e) {}
-  }
-  this.checkSubscriber= function( client ){
-    for (var at=this.clients, i=0; i<at.length; i=i-(-1))
-      if ( client == at[i].obj )  return; true;
-    return false;
-  }
-  this.subscribe= function( client, method ){
-    this.clients.push( {obj:client, meth:method} );
-  }
-}
-//-----
-//idea: JsonSourcer where payload takes form of
-//{t:"blah",notify:function(){new JsonSourcer().webGot(this)}.notify();
-
-//ApeCklist ts2327 1-26-16 JChoy v1.228 different deletion scheme 
-//TODO: saveData should avoid slamming other's changes
-//-----
-function ApeCklist(){
-  var $d= document;
-  var $t= this;
-  var $u=  atob( "aHR0cDovL3JpcC5va2RhaWx5LmNvbS9tYWQvdGV4dFN0b3JlLnBocA==" );
-  this.payload= {title:"Noname",items:[]}
-  this.apeNum= "110";
-  this.isDelMode= false;
-  this.start= function(div){
-    div.innerHTML= "";
-    this.titleDiv= div.appendChild($d.createElement("div"));
-    this.form= div.appendChild($d.createElement("form"));
-    this.itemsDiv= div.appendChild($d.createElement("div"));
-    this.itemsDiv.innerHTML= "loading data...";
-    this.addButton("*");
-    this.addTextbox("tb1");
-    div.appendChild($d.createElement("br"));
-    //Curly.addJS( "TS2326" );
-    //Curly.onReady( "JsonLoader", function(){ $t.webGet() } );
-    this.webGet();
-  }
-  this.addTextbox= function(nm, sz){
-    var tb=this.form.appendChild($d.createElement("input"));
-    tb.name= nm;
-    if (sz) tb.size= sz;
-  }
-  this.addButton= function(lbl){
-    var btn=this.form.appendChild($d.createElement("input"));
-    btn.value = lbl;
-    btn.type= "button";
-    btn.onclick= this.doClick;
-  }
-  this.doCheck= function(){
-    $t.payload.items[ this.dataIndex ].checked = (this.checked)?1:0;
-    $t.saveData();
-  }
-  this.doClick= function(){
-    var tbv= $t.form.tb1.value;
-    if (!tbv) return $t.reShowItems( $t.isDelMode=!$t.isDelMode );
-    $t.payload.items.push({text:tbv,checked:0});
-    var num= $t.payload.items.length-1;
-    $t.show1item( $t.payload.items[num], num );
-    $t.saveData();
-  }
-  this.saveData= function(){
-    var res= "!/c/psdb /s {0} !/ENDCMD\nif (_j) _j.s( {1} )";
-    res= res.replace("{1}", JSON.stringify($t.payload));
-    res= res.replace("{0}", this.apeNum );
-    res= [$u,"?f=set&i=2321&data=",escape(res)].join('');
-    var img= new Image();
-    $d.body.appendChild( img ).src= res;
-    img.height=1;
-  }
-  this.webGet= function(){
-    if (!window["_j"]) _j= new JsonLoader();
-    if (!_j.checkSubscriber(this))
-      _j.subscribe( this, "gotWebData" );
-    var at= ["https://dl.dropboxusercontent.com"]
-    at.push( "/u/28448395/jsondata/psdb/ape/3d/" );
-    at.push( this.apeNum.split('').join("/") + ".txt");
-    var el= $d.createElement("script");
-    el.src= at.join("");
-    $d.getElementsByTagName('head')[0].appendChild( el );
-  }
-  this.gotWebData= function( jd ){
-    $t.payload = jd;
-    $t.titleDiv.innerHTML= jd.title;
-    $t.reShowItems();
-  }
-  this.reShowItems= function( isDel ){
-    $t.itemsDiv.innerHTML= "";
-    for (var i=0,at=$t.payload.items; i<at.length; i++ )
-      $t.show1item( at[i], i, isDel );
-  }
-  this.show1item= function( item, i, isDel ){
-      var div=$t.itemsDiv.appendChild($d.createElement("div"));
-      var cb =div.appendChild($d.createElement("input"));
-      cb.type= "checkbox";
-      cb.dataIndex = i;
-      cb.onchange= $t.doCheck;
-      cb.checked= (item.checked==1);
-      var spn =div.appendChild($d.createElement("span"));
-      spn.innerHTML = item.text;
-      if (isDel) {
-        var btn =div.appendChild($d.createElement("input"));
-        btn.type= "button";
-        btn.dataIndex= i;
-        btn.value= "Del";
-        btn.onclick= $t.doDel;
-      }
-  }
-  this.doDel= function(){
-    $t.payload.items.splice( this.dataIndex, 1 );
-    $t.reShowItems( $t.isDelMode );
-    $t.saveData();
-  }
-}
-
-
-//-----
 new ApeCklist().start( document.getElementsByTagName("div")[0] );
-//Curly.bootClass( "TS2326,TS2327","JsonLoader,ApeCklist,PageApp" );
 </script>
